# tf_op

./: .gitignore  CMakeLists.txt  tt.py
pytorch_op/: build.py  main.py  make.sh
pytorch_op/add_op/: main.py  setup.py
pytorch_op/add_op/csrc/: add_op.h  add_op_binds.cpp  add_op_cpu.cpp  add_op_cpu.h  add_op_cuda.cu  add_op_cuda.h
pytorch_op/add_op/deprecated/functions/: add.py
pytorch_op/add_op/deprecated/src/: add_op.h  add_op_cuda.c
pytorch_op/add_op/src/: add_op_kernel.h
pytorch_op/lltm/: lltm.cpp  main.py  setup.py
pytorch_op/pow_op/: build.py  main.py
pytorch_op/pow_op/deprecated/: main.py
pytorch_op/pow_op/deprecated/functions/: pow.py
pytorch_op/pow_op/deprecated/modules/: pow.py
pytorch_op/pow_op/functions/: pow.py
pytorch_op/pow_op/src/: pow_op.c  pow_op.h
pytorch_op/src/: add_op.c  add_op_cuda.h  add_op_kernel.cu
src/: dot_product_grad.py  dot_product_op.cc  dot_product_op.cu  tf_op_test2.cu
tf_op/: CMakeLists.txt  Makefile.old  grad_test.py  tt.py
tf_op/include/: example.h
tf_op/src/: dot_product_grad_op.cc  dot_product_op.cc  dot_product_op.cu  roi_pool_test.py  roi_pooling_op.cc  roi_pooling_op.py  roi_pooling_op_grad.py  tf_op_test1.cc  tf_op_test2.cc
